fixed recipe "notnull" test