@@ -1,4 +1,4 @@
-package com.mihai.recipeapp.converts;
+package com.mihai.recipeapp.converters;
 
 import com.mihai.recipeapp.commands.CategoryCommand;
 import com.mihai.recipeapp.domain.Category;
@@ -9,7 +9,7 @@ import static org.junit.Assert.*;
 
 public class CategoryToCategoryCommandTest {
 
-    public static final Long ID_VALUE = new Long(1L);
+    public static final Long ID_VALUE = Long.valueOf(1L);
     public static final String DESCRIPTION = "descript";
     CategoryToCategoryCommand convter;
 
